--- a/order.html
+++ b/order.html
@@ -12,7 +12,7 @@
         <i  id="cross" class="ri-close-fill"></i>
         <ul>
             <li class="nav-list"><a href="#home">Home</a></li>
-            <li class="nav-list"><a href="#page2">Order</a></li>
+            <li class="nav-list"><a href="order.html">Order</a></li>
             <li class="nav-list"><a href="#shop">Shop</a></li>
             <li class="nav-list"><a href="#page3">Contact</a></li>
         </ul>
